--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@astrojs/rss": "^4.0.12",
     "astro": "^5.10.1"
+  },
+  "devDependencies": {
+    "cypress": "^14.5.0"
   }
 }
