--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@astrojs/rss": "^4.0.12",
     "astro": "^5.10.1"
   },
   "devDependencies": {
-    "cypress": "^14.5.0"
+    "@vitest/coverage-v8": "3.2.4",
+    "cypress": "^14.5.0",
+    "vitest": "^3.2.4"
   }
 }
