--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/rss": "^4.0.12",
+    "@astrojs/svelte": "^7.1.0",
     "astro": "^5.10.1",
+    "svelte": "^5.34.9",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
