--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.12",
     "@astrojs/svelte": "^7.1.0",
     "astro": "^5.10.1",
+    "astro-og-canvas": "^0.7.0",
     "svelte": "^5.34.9",
     "typescript": "^5.8.3"
   },
