--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^6.4.1",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/svelte": "^7.1.0",
     "astro": "^5.10.1",
