--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@testing-library/svelte": "^5.2.8",
     "@vitest/coverage-v8": "3.2.4",
     "cypress": "^14.5.0",
     "vitest": "^3.2.4"
