--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/svelte": "^5.2.8",
     "@vitest/coverage-v8": "3.2.4",
     "cypress": "^14.5.0",
+    "jsdom": "^26.1.0",
     "vitest": "^3.2.4"
   }
 }
