--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/svelte": "^5.2.8",
     "@vitest/coverage-v8": "3.2.4",
     "cypress": "^14.5.0",
