--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/svelte": "^5.2.8",
+    "@testing-library/user-event": "^14.6.1",
     "@vitest/coverage-v8": "3.2.4",
     "cypress": "^14.5.0",
+    "happy-dom": "^18.0.1",
     "jsdom": "^26.1.0",
     "vitest": "^3.2.4"
   }
