--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@astrojs/netlify": "^6.4.1",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/svelte": "^7.1.0",
+    "@astrojs/vue": "^5.1.0",
     "astro": "^5.13.2",
     "astro-og-canvas": "^0.7.0",
     "svelte": "^5.34.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vue": "^3.5.19"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/svelte": "^5.2.8",
     "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@vitest/coverage-v8": "3.2.4",
     "cypress": "^14.5.0",
     "happy-dom": "^18.0.1",
