--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.5.19"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^10.0.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/svelte": "^5.2.8",
