--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.5.19"
   },
   "devDependencies": {
+    "@cypress-audit/lighthouse": "^1.4.2",
     "@testing-library/cypress": "^10.0.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -31,7 +32,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@testing-library/vue": "^8.1.0",
     "@vitest/coverage-v8": "3.2.4",
-    "cypress": "^14.5.0",
+    "cypress": "^14.5.4",
     "happy-dom": "^18.0.1",
     "vitest": "^3.2.4"
   }
