--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/vue": "^5.1.0",
     "astro": "^5.13.2",
     "astro-og-canvas": "^0.7.0",
+    "rss-parser": "^3.13.0",
     "svelte": "^5.34.9",
     "typescript": "^5.8.3",
     "vue": "^3.5.19"
